update to frontend + backend
added new images, prices from different providers, new config for hotels..